# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: own-check.yml  python-app.yml
gendiff/: __init__.py  argparse_runner.py  cli.py  diff_generator.py  file_handler.py  file_parser_via_formatter.py  files_loader.py  gendiff.py  parser.py  parsers_runner.py
gendiff/formatters/: __init__.py  diff_formatter.py  file_parser.py  json.py  plain.py  stylish.py
gendiff/parsers/: __init__.py  json_parser.py  yaml_parser.py
gendiff/scripts/: entry_point.py  gendiff.py
tests/: __init__.py  fixture_handler.py  test_diff_generator.py  test_gendiff.py  test_parsers_runner.py  test_plain.py  test_stylish.py
tests/fixtures/: diff.json  diff.py  diff.yml  first_file.yaml  first_input.yml  first_parsed_json.py  first_parsed_yaml.py  json_diff.py  json_sample.txt  plain_yaml.txt  plain_yml.txt  second.yml  second_file.yaml  second_parsed_json.py  second_parsed_yaml.py  stylish_json.txt  stylish_yaml.txt  view1.json  view1.yml  view2.json  view2.yml  yaml_diff.py  yaml_sample.txt  yaml_stylish_sample.txt
