[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The project allows you to compare JSON and YML files and display their differences in three formats"
authors = ["Roman <laworp@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.entry_point:main"


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.4"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
